Bug 34999 - UI: Navigator row selector pane exceeds reserved grey area
Summary: UI: Navigator row selector pane exceeds reserved grey area
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.1 release
Hardware: x86-64 (AMD64) All
: medium trivial
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:3.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-03 22:16 UTC by sasha.libreoffice
Modified: 2012-04-25 09:01 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
navigator in Calc looks somewhat strange, element not fits (20.60 KB, application/vnd.oasis.opendocument.text)
2011-03-03 22:16 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sasha.libreoffice 2011-03-03 22:16:19 UTC
Created attachment 44107 [details]
navigator in Calc looks somewhat strange, element not fits

navigator in Calc looks somewhat strange, element not fits
Demonstration in attachment
tryed only on Linux 64 bit yet
Comment 1 Don't use this account, use tml@iki.fi 2011-03-07 02:40:06 UTC
KDE specific?
Comment 2 sasha.libreoffice 2011-05-17 02:07:12 UTC
After experiments I find that it depends from UI zoom.
To reproduce this bug do Tools->Options -> LibreOffice->View ->Scaling in upper left corner. Set it to 130.
Then exit LibreOffice. It is important.
Then start Calc and open Navigator. Parts of UI not fits in their places.
Comment 3 Björn Michaelsen 2011-12-23 11:47:28 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 4 sasha.libreoffice 2012-01-02 00:37:19 UTC
reproduced on LibO 3.5.0 beta 1
Comment 5 sasha.libreoffice 2012-01-02 01:07:44 UTC
(In reply to comment #1)
> KDE specific?

No. In Gnome 3 this problem seen even with 100% zoom. And with 130% this becomes unreadable.
Comment 6 tester8 2012-02-03 01:27:05 UTC
Reproduced with

LibreOffice 3.5.0rc3
7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Ubuntu 10.04.3 x86
Linux 2.6.32-38-generic Russian UI

Gnome 2.28.
Comment 7 Rainer Bielefeld Retired 2012-04-19 02:08:47 UTC
[Reproducible] with "LibreOffice 3.4.5 German UI [Build ID: OOO340m1 (Build:502)]" parallel Server installation on German WIN7 Home Premium (64bit), 
simply open the navigator in a new empty document, should look like in sasha's attached screenshot.

Is independent from setting in 'Tools -> Options -> LibO -> View -> Scaling'

Also in 3.3.0, 3.5.2, 3.6 Master.
I wonder why we have so few reports / duplicates, ...
May be only with particular monitor / graphic card?
My PC: 64 bit AMD Phenom II X4 955 Processor 3.2 GHz, 4GB RAM, 
Graphic Card: NVIDIA GeForce GT 430, Monitor HANNS-G HL225DBB 1920 x 1080 

@Ivan:
Can you help?
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug.
Comment 8 Not Assigned 2012-04-24 10:29:21 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1a87849f1971bf6802cc3d6395181b6ff0ceeed1

fdo#34999: UI: Navigator row selector pane exceeds reserved grey area
Comment 9 Ivan Timofeev (retired) 2012-04-24 10:35:17 UTC
Trivial issue, fixed in master now. I would not propose the fix for libreoffice-3-5...
Comment 10 sasha.libreoffice 2012-04-25 09:01:52 UTC
Thanks for fixing this trivial issue