fdo#34999: UI: Navigator row selector pane exceeds reserved grey area