sc/source/ui/navipi/navipi.cxx
@@ -675,7 +675,9 @@ ScNavigatorDlg::ScNavigatorDlg( SfxBindings* pB, SfxChildWindowContext* pCW, Win
 
     aTitleBase = GetText();
 
-    long nListboxYPos = aTbxCmd.GetPosPixel().Y() + aTbxCmd.GetSizePixel().Height() + 4;
+    long nListboxYPos =
+        Max( aTbxCmd.GetPosPixel().Y() + aTbxCmd.GetSizePixel().Height(),
+             aEdRow.GetPosPixel().Y() + aEdRow.GetSizePixel().Height() ) + 4;
     aLbEntries.SetPosSizePixel( 0, nListboxYPos, 0, 0, WINDOW_POSSIZE_Y);
 
     nBorderOffset = aLbEntries.GetPosPixel().X();
